fixed center align

--- a/src/sass/_services.scss
+++ b/src/sass/_services.scss
@@ -124,6 +124,7 @@
     .services-btn {
       display: flex;
       justify-content: center;
+      align-content: center;
       text-align: center;
       font-weight: bolder;
       font-size: 2rem;
